# url_launcher_aurora

./: .gitignore  README.md  pubspec.yaml
aurora/: CMakeLists.txt  url_launcher_aurora_plugin.cpp
aurora/include/url_launcher_aurora/: globals.h  url_launcher_aurora_plugin.h
aurora/intent/: intent_default.cpp  intent_default.h
aurora/invoke_manager/: invoke_manager.cpp  invoke_manager.h
aurora/utils/: utils.cpp  utils.h
example/: .gitignore  README.md  pubspec.yaml
example/aurora/: CMakeLists.txt
example/aurora/desktop/: com.example.url_launcher_aurora_example.desktop
example/aurora/rpm/: com.example.url_launcher_aurora_example.spec
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
lib/: url_launcher_aurora.dart  url_launcher_aurora_method_channel.dart  url_launcher_aurora_platform_interface.dart
